More stuff done

--- a/src/Makefile
+++ b/src/Makefile
@@ -4,13 +4,16 @@ CXX:=g++
 CXXFLAGS:=-Wall -Wextra -g -DDEBUG -DHAVE_CONFIG_H
 LDFLAGS:=
 
+all: subscale
+
 clean:
 	rm -f *.o subscale
 
-all: subscale
-
-subscale: main.o
+subscale: main.o format_sup.o
 	$(CXX) $(CXXFLAGS) -o $@ $^ $(LDFLAGS)
 
-main.o: main.cpp common.hpp
+main.o: main.cpp common.hpp subtitle.hpp
+	$(CXX) $(CXXFLAGS) -c -o $@ $<
+
+format_sup.o: format_sup.cpp format_sup.hpp subtitle.hpp common.hpp
 	$(CXX) $(CXXFLAGS) -c -o $@ $<
